<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity"
    android:orientation="vertical"
    android:background="#000000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="back"
        android:layout_margin="10dp"
        android:onClick="back"
        android:textSize="20sp"
        android:background="@android:color/holo_green_light"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/eventsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:background="#4444FF">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/event1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/eventA"
                    android:paddingLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:background="#4444FF">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/event2"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/eventB"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:background="#4444FF">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/event3"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/eventC"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>